Fix UI on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,7 +11,7 @@
 
 .app-wrapper {
   @apply flex justify-center items-center;
-  min-height: 100dvh;
+  min-height: 100svh;
   background: rgb(156, 89, 254);
   background: linear-gradient(
     0deg,
